Added end to end encryption
Co-Authored-By: Manul Sahu <manulsahu3@gmail.com>

--- a/src/Components/MusicPlayer.css
+++ b/src/Components/MusicPlayer.css
@@ -293,7 +293,7 @@
 }
 
 .songNameText {
-  color: #ffffff;
+  color: var(--music-player-text);
   font-weight: 600;
   overflow: hidden;
   text-overflow: ellipsis;
